Software/QuickUsbEpcsProg/QuickUSB.h

/*- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
  Constants
- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -*/
// QuickUSB String Descriptor Indices
#define QUICKUSB_MAKE                           1
#define QUICKUSB_MODEL                          2
#define QUICKUSB_SERIAL                         3
// QuickUSB Port Addresses
#define PORT_A                                  0
#define PORT_B                                  1
#define PORT_C                                  2
#define PORT_D                                  3
#define PORT_E                                  4
// QuickUSB Settings
#define SETTING_EP26CONFIG                      0
#define SETTING_WORDWIDE                        1
#define SETTING_DATAADDRESS                     2
#define SETTING_FIFO_CONFIG                     3
#define SETTING_FPGATYPE                        4
#define SETTING_CPUCONFIG                       5
#define SETTING_SPICONFIG                       6
#define SETTING_SLAVEFIFOFLAGS                  7
#define SETTING_I2CTL                           8
#define SETTING_PORTA                           9
#define SETTING_PORTB                           10
#define SETTING_PORTC                           11
#define SETTING_PORTD                           12
#define SETTING_PORTE                           13
#define SETTING_PORTACCFG                       14
#define SETTING_PINFLAGS                        15
#define SETTING_VERSIONBUILD                    16
#define SETTING_VERSIONSPEED                    17
#define SETTING_TIMEOUT_HIGH                    18
#define SETTING_TIMEOUT_LOW                     19
// FPGA Configuration Type Settings
#define FPGATYPE_ALTERAPS                       0
#define FPGATYPE_XILINXSS                       1
// QuickUSB Error Codes
#define QUICKUSB_ERROR_NO_ERROR                 0
#define QUICKUSB_ERROR_OUT_OF_MEMORY            1
#define QUICKUSB_ERROR_CANNOT_OPEN_MODULE       2
#define QUICKUSB_ERROR_CANNOT_FIND_DEVICE       3
#define QUICKUSB_ERROR_IOCTL_FAILED             4
#define QUICKUSB_ERROR_INVALID_PARAMETER        5
#define QUICKUSB_ERROR_TIMEOUT                  6
#define QUICKUSB_ERROR_FUNCTION_NOT_SUPPORTED   7
#define QUICKUSB_ERROR_I2C_BUS_ERROR            8
#define QUICKUSB_ERROR_I2C_NO_ACK               9
#define QUICKUSB_ERROR_I2C_SLAVE_WAIT           10
#define QUICKUSB_ERROR_I2C_TIMEOUT              11
#define QUICKUSB_ERROR_UNKNOWN_DRIVER_TYPE      12
#define QUICKUSB_ERROR_ALREADY_OPENED           13
#define QUICKUSB_ERROR_CANNOT_CLOSE_MODULE      14
#define QUICKUSB_ERROR_FPGA_INIT_FAILED         15
#define QUICKUSB_ERROR_PACKET_NOT_MULTIPLE_512  16
#define QUICKUSB_ERROR_PACKET_NOT_MULTIPLE_64   17
#define QUICKUSB_ERROR_UNKNOWN_SYSTEM_ERROR     18
#define QUICKUSB_ERROR_ABORTED                  19
#define QUICKUSB_ERROR_DEPRECATED               20
#define QUICKUSB_ERROR_INVALID_SERIAL           21
#define QUICKUSB_ERROR_CANNOT_OPEN_FILE         22
#define QUICKUSB_ERROR_VERIFY_FAILED            23
#define QUICKUSB_ERROR_FIRMWARE_ERROR           24
#define QUICKUSB_ERROR_ALREADY_COMPLETED        25
#define QUICKUSB_ERROR_NOT_COMPLETED            26
#define QUICKUSB_ERROR_FPGA_CONFIG_FAILED       27
#define QUICKUSB_ERROR_INVALID_OPERATION        28
#define QUICKUSB_ERROR_TOO_MANY_REQUESTS        29
#define QUICKUSB_ERROR_EPCS_NOT_FOUND           30
#define QUICKUSB_ERROR_EPCS_TOO_SMALL           31
// QuickUSB Open Flags 
#define QUICKUSB_OPEN_NORMAL                    0x0000
#define QUICKUSB_OPEN_IF_CLOSED                 0x0001
// QuickUSB Programming API Flags
#define QUICKUSB_PROGRAM_SERIAL                 0x10000000
#define QUICKUSB_PRESERVE_CUSTOMIZATION         0x00010000
#define QUICKUSB_PRESERVE_DEFAULTS              0x00020000
#define QUICKUSB_PRESERVE_GPIF                  0x00040000
#define QUICKUSB_PRESERVE_SERIAL                0x00080000
// QuickUSB EPCS IDs
#define QUICKUSB_EPCS_ID_UNKNOWN                0x00
#define QUICKUSB_EPCS1_ID                       0x10
#define QUICKUSB_EPCS4_ID                       0x12
#define QUICKUSB_EPCS16_ID                      0x14
#define QUICKUSB_EPCS64_ID                      0x16
// QuickUSB EPCS Capacities (in bytes)
#define QUICKUSB_EPCS1_SIZE                     (1048576 / 8)
#define QUICKUSB_EPCS4_SIZE                     (QUICKUSB_EPCS1_SIZE * 4)
#define QUICKUSB_EPCS16_SIZE                    (QUICKUSB_EPCS1_SIZE * 16)
#define QUICKUSB_EPCS64_SIZE                    (QUICKUSB_EPCS1_SIZE * 64)
typedef unsigned char         QBYTE;
typedef unsigned short        QWORD;
    typedef unsigned long           QULONG;
    typedef HANDLE                  QHANDLE;
    typedef unsigned long     QULONG;
    typedef signed short      QHANDLE;
    typedef QRESULT           QRETURN;
    typedef UInt32            QULONG;
    typedef QLONG             QHANDLE;
    typedef QRESULT           QRETURN;
typedef QHANDLE*              PQHANDLE;
typedef QBYTE*                PQBYTE;
typedef QCHAR*                PQCHAR;
typedef const QCHAR*          PCQCHAR;
typedef QWORD*                PQWORD;
typedef QULONG*               PQULONG;
QUSBLIB QRETURN QuickUsbGetLastError(
    PQULONG error
);
QUSBLIB QRETURN QuickUsbFindModules(
    PQCHAR nameList,
    QULONG length);
QUSBLIB QRETURN QuickUsbOpen(
    PQHANDLE hDevice, 
    PQCHAR   deviceName
);
QUSBLIB QRETURN QuickUsbClose(
    QHANDLE hDevice
);
QUSBLIB QRETURN QuickUsbGetStringDescriptor(
    QHANDLE hDevice, 
    QBYTE   index,
    PQCHAR  buffer, 
    QWORD   length
);
QUSBLIB QRETURN QuickUsbReadSetting(
    QHANDLE hDevice, 
    QWORD   address, 
    PQWORD  value
);
QUSBLIB QRETURN QuickUsbWriteSetting(
    QHANDLE hDevice,
    QWORD   address, 
    QWORD   value
);
QUSBLIB QRETURN QuickUsbStartFpgaConfiguration(
    QHANDLE hDevice
);
QUSBLIB QRETURN QuickUsbWriteFpgaData(
    QHANDLE hDevice, 
    PQBYTE  fpgadata, 
    QULONG  datalength
);
QUSBLIB QRETURN QuickUsbIsFpgaConfigured(
    QHANDLE hDevice, 
    PQWORD  isConfigured
);
QUSBLIB QRETURN QuickUsbConfigureFpga(
    QHANDLE hDevice, 
    PCQCHAR filePath
);
QUSBLIB QRETURN QuickUsbReadCommand(
    QHANDLE hDevice, 
    QWORD   address, 
    PQBYTE  data, 
    PQWORD  length
);
QUSBLIB QRETURN QuickUsbWriteCommand(
    QHANDLE hDevice, 
    QWORD   address, 
    PQBYTE  data, 
    QWORD   length
);
QUSBLIB QRETURN QuickUsbReadData(
    QHANDLE hDevice, 
    PQBYTE  data, 
    PQULONG length
);
QUSBLIB QRETURN QuickUsbWriteData(
    QHANDLE hDevice, 
    PQBYTE  data, 
    QULONG  length
);
QUSBLIB QRETURN QuickUsbReadDefault(
    QHANDLE hDevice,
    QWORD   address, 
    PQWORD  data
);
QUSBLIB QRETURN QuickUsbWriteDefault(
    QHANDLE hDevice,
    QWORD   address, 
    QWORD   data
);